// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`availability-form Renders \`availability-form\` with custom props 1`] = `
<div
  class="layout column"
>
  <field-title-stub
    name="title"
    value=""
  />
  <field-periodic-refresh-stub
    form="[object Object]"
  />
  <field-columns-stub
    columns="[object Object],[object Object]"
    label="Column names"
    templates="[object Object]"
    templatespending="true"
    type="entity"
  />
  <widget-settings-group-stub
    title="Advanced settings"
  >
    <field-columns-stub
      columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      label="Column names for active alarms"
      templates="[object Object],[object Object]"
      templatespending="true"
      type="alarm"
    />
    <field-quick-date-interval-type-stub
      ranges="[object Object]"
      value="today"
    />
    <field-availability-display-parameter-stub
      name="default_display_parameter"
      value="0"
    />
    <field-availability-display-show-type-stub
      name="default_show_type"
      value="0"
    />
    <field-filters-stub
      addable="true"
      editable="true"
      filters=""
      widgetid="widget-id"
      withentity="true"
    />
  </widget-settings-group-stub>
</div>
`;

exports[`availability-form Renders \`availability-form\` with required props 1`] = `
<div
  class="layout column"
>
  <field-title-stub
    name="title"
    value=""
  />
  <field-periodic-refresh-stub
    form="[object Object]"
  />
  <field-columns-stub
    columns="[object Object],[object Object]"
    label="Column names"
    templates=""
    type="entity"
  />
  <widget-settings-group-stub
    title="Advanced settings"
  >
    <field-columns-stub
      columns="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      label="Column names for active alarms"
      templates=""
      type="alarm"
    />
    <!---->
    <field-availability-display-parameter-stub
      name="default_display_parameter"
      value="0"
    />
    <field-availability-display-show-type-stub
      name="default_show_type"
      value="0"
    />
    <!---->
  </widget-settings-group-stub>
</div>
`;
